Kubernetes/deploiement/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web
  namespace: secapp

spec: 
  gatewayClassName: istio
  listeners:
  - protocol: HTTP
    port: 80
    name: prod-web-gw
    allowedRoutes:
      namespaces:
        from: Same
  - protocol: HTTPS
    port: 443
    name: https
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: secret-tls.jus2fruit
  - name: cli-tcp
    port: 8444
    protocol: TCP
    tls:
      certificateRefs:
        - kind: Secret
          name: secret-tls.jus2fruit
    allowedRoutes:
      namespaces:
        from: Same
