Kubernetes/deploiement/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
  namespace: secapp

spec:
  parentRefs:
  - name: prod-web
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: base-site-svc
      port: 8080
